# VancouverHouseFinder

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: hourly_scrape.yml  scheduled_scrape.yml
data/exports/: results.csv  results.html
data/labels/: listing_kind_labels.csv
data/processed/: transit_cache.json
data/state/: craigslist_detail_state.json  last_seen.json
docs/: index.html
src/vhf/: cli.py  dedupe.py  export.py  filter.py  listing_kind_ml.py  listing_labels.py  models.py  notify.py  paths.py  pipeline.py  rentals_ca_title.py  state_file.py  storage.py  transit.py  verify_export_html.py
src/vhf/sites/: __init__.py  base.py  craigslist.py  padmapper.py  rentals_ca.py  zumper.py
tests/: __init__.py  test_export_csv.py  test_export_html_geo.py  test_listing_kind_ml.py  test_listing_labels.py  test_notify.py  test_rentals_ca_title.py  test_state_file.py  test_verify_export_html.py
