[project]
name = "vhf"
version = "0.1.0"
description = "Vancouver House Finder: scrape, normalize, dedupe, and view rental listings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "feedparser>=6.0",
  "rapidfuzz>=3.9",
  "typer>=0.12",
  "rich>=13.7",
  "pyjwt>=2.8",
  "curl-cffi>=0.7",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]

[project.scripts]
vhf = "vhf.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

